Added device removal from notification when out of range.